# track

./: AGENTS.md  CONVENTIONS.md  Cargo.toml  LICENSE  Makefile  README.md  track-notify.service
src/: align.rs  args.rs  chart.rs  cli.rs  goals.rs  logs.rs  main.rs  manip.rs  merge.rs  notify.rs  time_utils.rs  track.rs
src/database/: base.rs  iter.rs  mod.rs  range.rs  schema.rs  tests.rs  tests_entry.rs  tests_info.rs
src/database/tests/: entry.rs  info.rs  mock.rs  mod.rs  range.rs
src/heatmap/: debug.rs  durations.rs  mod.rs
src/utils/: cli.rs  io.rs  mod.rs  rand.rs  time.rs
utils/: migrate.py
