[package]
name = "track"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.14"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
ctrlc = "3.5.2"
humantime = "2.3.0"
parking_lot = "0.12.5"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.145"
terminal_size = "0.4.4"
time = { version = "0.3.47", features = ["local-offset", "formatting", "serde", "serde-human-readable"] }

[dependencies.regex]
version = "1.12.3"
default-features = false
features = ["std"]

